Fixed fetching of Alaska features. Also fixed spacing of graph legends.

--- a/nar_common/static/nar_ui/nar.less
+++ b/nar_common/static/nar_ui/nar.less
@@ -897,6 +897,9 @@ ul#relativeLinks{
 .region_graphs table.jqplot-table-legend {
     border: 0px;
 }
+.region_graphs .jqplot-table-legend-label {
+    padding-left: 4px;
+}
 
  /*###########################coastal_region_end####################### */
   
